

namespace Assets.Script
{
    public static class CharacterAnimatorVariableNames
    {
        public static string IsSliding { get { return "IsSliding"; } }
        public static string IsJumping { get { return "IsJumping"; } }
        public static string Speed { get { return "Speed"; } }
    }
}
